namespace java com.abin.lee.thrift.rpc.model


struct CouponInfo
{
  1:  i64 couponId,
  2:  string couponName,
  3:  double couponPrice,
  4:  string source,
  5:  i64 couponInventory
}



